--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "knex": "^0.21.0",
+    "knex-cleaner": "^1.3.1",
+    "pg": "^8.4.1",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
